# KpcBuildLLM

./: .gitignore  pyproject.toml
configs/: default.yaml
logs/: app.log.2026-05-09  app.log.2026-05-16  app.log.2026-05-21  app.log.2026-05-22
src/kpc_llm/: __init__.py
src/kpc_llm/core/: __init__.py  transformer.py
src/kpc_llm/data_process/: __init__.py  causal_attention_process.py  drop_out.py  lyr_normal.py  textloader.py  tiktokenizer.py  token_loader.py  tokenizer.py
src/kpc_llm/data_process/test/: test_tokenizer.py
src/kpc_llm/div_logic/: DirectPreferenceOptimize.py  log_softmax.py
src/kpc_llm/layers/: __init__.py  attention.py  causal_self_attention_V3.py  embedding.py  feed_forward.py  multi_head_attention.py  self_attention_v1.py  self_attention_v2.py  token2InputEnbedding.py
src/kpc_llm/layers/kpc_gpt_model/: config_model.py  gpt_model.py  gpt_norml.py  gpt_trnsf_block.py
src/kpc_llm/models/: __init__.py  gpt.py
src/kpc_llm/utils/: __init__.py  dataloader.py  logger.py  tiktokenizer.py  tokenize_txt.py  tokenizer.py
src/kpc_llm/utils/test/: test_tokenizer.py
tests/: test_layers.py
