[project]
name = "kpc-llm"
version = "0.1.0"
description = "A personal LLM architecture implementation practice project"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.24.0",
    "transformers>=4.30.0",
    "pyyaml>=6.0",
    "pyprojroot>=0.3.0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.black]
line-length = 120
target-version = ["py312"]
